<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"  xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/adfs_config">


        <EditTextPreference
            app:key="@string/client_id_key"
            app:title="@string/client_id"
            app:defaultValue="@string/default_client_id_map"
            app:summary="@string/client_id_summary"
            app:useSimpleSummaryProvider="false" />

        <EditTextPreference
            app:key="@string/redirect_url_key"
            app:title="@string/redirect_url"
            app:defaultValue="@string/default_redirect_url"
            app:summary="@string/redirect_url_summary"
            app:useSimpleSummaryProvider="false" />

        <EditTextPreference
            app:key="@string/user_id_claim_key"
            app:title="@string/user_id_claim"
            app:defaultValue="@string/default_user_id_claim"
            app:summary="@string/user_id_claim_summary"
            app:useSimpleSummaryProvider="false" />

        <EditTextPreference
            app:key="@string/proxy_key"
            app:title="@string/proxy"
            app:defaultValue="@string/default_proxy_map"
            app:summary="@string/proxy_summary"
            app:useSimpleSummaryProvider="false" />

        <EditTextPreference
            app:key="@string/baseurl_key"
            app:title="@string/baseurl"
            app:defaultValue="@string/default_baseurl_map"
            app:summary="@string/baseurl_summary"
            app:useSimpleSummaryProvider="false" />

        <EditTextPreference
            app:key="@string/timeout_key"
            app:title="@string/timeout"
            app:defaultValue="@string/default_timeout"
            app:summary="@string/timeout_summary"
            app:useSimpleSummaryProvider="false" />
        <!--Preference
            app:key="@string/configuration_key"
            app:title="@string/refresh_configuration"
            app:useSimpleSummaryProvider="false"
            android:maxLines="25" /-->
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/debug">
        <SwitchPreference
            android:key="@string/toggle_map_key"
            android:title="@string/toggle_map"
            android:defaultValue="false"
            android:summaryOn="@string/toggle_map_summary_poldom"
            android:summaryOff="@string/toggle_map_summary_map" />
        <SwitchPreference
            android:key="@string/prompt_key"
            android:title="@string/prompt"
            android:defaultValue="true"
            android:summary="@string/prompt_summary"/>
        <SwitchPreference
            android:key="@string/logout_redirect_key"
            android:title="@string/logout_redirect"
            android:defaultValue="true"
            android:summary="@string/logout_redirect_summary"/>
        <!--Preference
            app:key="@string/debug_activity_key"
            app:title="@string/debug_activity"
            app:summary="@string/debug_activity_summary"
            app:useSimpleSummaryProvider="false"/-->
    </PreferenceCategory>
</PreferenceScreen>